--- a/rhtest_webserver_create.yml
+++ b/rhtest_webserver_create.yml
@@ -1,6 +1,6 @@
 ---
 - name: Simple Playbook to create an Azure VM for Webserver
-  hosts: localhost
+  hosts: azure 
 
   tasks:
   - name: Create virtual machine
