--- a/rhtest_webserver_create.yml
+++ b/rhtest_webserver_create.yml
@@ -8,8 +8,8 @@
       resource_group: rhel75-group
       name: rhtest1
       vm_size: Standard_B1s
-      admin_username: admin
-      admin_password: redhat
+      admin_username: feliz 
+      admin_password: r3dh@t!
       network_interfaces: azurerhprod1297
       image:
         offer: RHEL
