--- a/azure_vm_create.yml
+++ b/azure_vm_create.yml
@@ -12,10 +12,12 @@
     azure_rm_virtualmachine:
       resource_group: "{{ azure_group_name }}"
       name: "{{ azure_vm_name }}"
+      short_hostname: "{{ azure_vm_name }}"
       vm_size: Standard_B1s
       admin_username: "{{ azure_ssh_user }}"
-      ssh_password: false
+      ssh_password_enabled: false
       ssh_public_keys: "{{ azure_ssh_key }}"
+      started: yes
       image:
         offer: RHEL
         publisher: RedHat
