--- a/azure_vm_create.yml
+++ b/azure_vm_create.yml
@@ -10,7 +10,7 @@
   tasks:
   - name: Create virtual machine
     azure_rm_virtualmachine:
-      resource_group: "{{ azure_group_name }}"
+      #resource_group: "{{ azure_group_name }}"
       name: "{{ azure_vm_name }}"
       short_hostname: "{{ azure_vm_name }}"
       vm_size: Standard_B1s
