--- a/azure_rhtest_webserver_reploy.yml
+++ b/azure_rhtest_webserver_reploy.yml
@@ -1,6 +1,8 @@
 ---
 - name: Azure Webserver deployment for rhtest
   hosts: "rhtest*"
+  become: yes
+  become_method: sudo
 
   vars:
     - http_port: 80
