--- a/azure_rhsql_dbserver_deploy.yml
+++ b/azure_rhsql_dbserver_deploy.yml
@@ -5,15 +5,21 @@
   become_method: sudo
 
   vars:
+    - mysqlrepo: "http://repo.mysql.com/mysql-community-release-el7-7.noarch.rpm"
     - ntpserver: "0.nz.pool.ntp.org"
 
   tasks:
+  - name: install mysql community server repo
+    yum:
+      name: "{{ mysqlrepo }}"
+      state: present
+
   - name: install mysql server, mysql-python, and ntp
     yum:
       name: "{{ item }}"
       state: present
     with_items:
-      - mariadb-server
+      - mysql-server
       - MySQL-python
       - ntp
 
