--- a/azure_vm_security.yml
+++ b/azure_vm_security.yml
@@ -19,6 +19,13 @@
           access: Allow
           priority: 100
           direction: Inbound
+        - name: HTTPLocal
+          protocol: Tcp
+          source_address_prefix: '10.0.0.0/8'
+          destination_port_range: "{{ http_port }}"
+          access: Allow
+          priority: 101
+          direction: Inbound
         - name: HTTP
           protocol: Tcp
           source_address_prefix: "{{ tower_public_ip }}/32"
