--- a/azure_rhsql_dbserver_insert_db.yml
+++ b/azure_rhsql_dbserver_insert_db.yml
@@ -1,7 +1,9 @@
 ---
 - name: Simple MySQL Insert Table
   hosts: "rhsql*"
-
+  become: yes
+  become_method: sudo
+  
   tasks:
   - name: create an sql file from template
     template:
