--- a/azure_rhsql_dbserver_insert_db.yml
+++ b/azure_rhsql_dbserver_insert_db.yml
@@ -3,7 +3,7 @@
   hosts: "rhsql*"
   become: yes
   become_method: sudo
-  
+
   tasks:
   - name: create an sql file from template
     template:
@@ -15,6 +15,8 @@
       name: theredteam
       login_user: ansible
       login_password: redhat
+      login_unix_socket: "/var/lib/mysql/mysql.sock"
+      config_file: "/etc/my.cnf"      
       state: import
       target: /tmp/insert_table.sql
 
