--- a/azure_rhdesktop_http_test.yml
+++ b/azure_rhdesktop_http_test.yml
@@ -1,7 +1,7 @@
 ---
 - name: Test HTTP Output from Desktop using Firefox
   hosts: "{{ webserver_host }}" 
-  gather_facts: yes
+  gather_facts: no
 
   tasks:
   - name: "Calling Firefox. Please see desktop terminal"
