--- a/azure_vm_security.yml
+++ b/azure_vm_security.yml
@@ -28,7 +28,7 @@
           direction: Inbound
         - name: HTTP
           protocol: Tcp
-          source_address_prefix: "{{ tower_public_ip }}/32"
+          source_address_prefix: "*"
           destination_port_range: "{{ http_port }}"
           access: Allow
           priority: 102
