--- a/azure_rhtest_webserver_update_page.yml
+++ b/azure_rhtest_webserver_update_page.yml
@@ -12,6 +12,8 @@
 - name: Deploy new website to Webservers
   hosts: "{{ webserver_host }}"
   gather_facts: no
+  become: yes
+  become_method: sudo
 
   tasks:
   - name: clear html directory
