--- a/azure_vm_delete.yml
+++ b/azure_vm_delete.yml
@@ -10,9 +10,6 @@
       resource_group: "{{ azure_group_name }}"
       name: "{{ azure_vm_name }}"
       state: absent
-      remove_on_absent:
-        - network_interfaces
-        - virtual_storage
-        - public_ips
+      remove_on_absent: all
     delegate_to: localhost
 ...
