--- a/azure_vm_security_winsrv2016.yml
+++ b/azure_vm_security_winsrv2016.yml
@@ -1,60 +1,20 @@
 ---
-- name: Update Security Port on 3Tier App Servers
+- name: Update Security Port on Windows Servers
   hosts: "{{ tower_hostgroup_name }}"
   gather_facts: no
 
-  vars:
-    - http_port: 80
-
   tasks:
-  - name: Allow SSH and HTTP on rhproxy and rhtest
+  - name: Allow RDP
     azure_rm_securitygroup:
       resource_group: "{{ resource_group }}"
       name: "{{ security_group }}"
       rules:
-        - name: SSH
+        - name: RDP
           protocol: Tcp
           source_address_prefix: "{{ tower_public_ip }}/32"
-          destination_port_range: 22
+          destination_port_range: 3389
           access: Allow
           priority: 100
-          direction: Inbound
-        - name: HTTPLocal
-          protocol: Tcp
-          source_address_prefix: '10.0.0.0/8'
-          destination_port_range: "{{ http_port }}"
-          access: Allow
-          priority: 101
-          direction: Inbound
-        - name: HTTP
-          protocol: Tcp
-          source_address_prefix: "*"
-          destination_port_range: "{{ http_port }}"
-          access: Allow
-          priority: 102
-          direction: Inbound
-    when: ( 'rhtest' in name or 'rhproxy' in name ) 
-    delegate_to: localhost
-
-  - name: Allow SSH and SQL on rhsql
-    azure_rm_securitygroup:
-      resource_group: "{{ resource_group }}"
-      name: "{{ security_group }}"
-      rules:
-        - name: SSH
-          protocol: Tcp
-          source_address_prefix: "{{ tower_public_ip }}/32"
-          destination_port_range: 22
-          access: Allow
-          priority: 100
-          direction: Inbound
-        - name: SQL
-          protocol: Tcp
-          source_address_prefix: '10.0.0.0/8'
-          destination_port_range: 3306
-          access: Allow
-          priority: 102
-          direction: Inbound
-    when: "'rhsql' in name"
+          direction: Inbound 
     delegate_to: localhost
 ...
