--- a/azure_vm_security_winsrv2016.yml
+++ b/azure_vm_security_winsrv2016.yml
@@ -4,7 +4,7 @@
   gather_facts: no
 
   tasks:
-  - name: Allow RDP
+  - name: Allow RDP and WinRM Inbound Ports
     azure_rm_securitygroup:
       resource_group: "{{ resource_group }}"
       name: "{{ security_group }}"
@@ -15,6 +15,13 @@
           destination_port_range: 3389
           access: Allow
           priority: 100
-          direction: Inbound 
+          direction: Inbound
+        - name: WinRM
+          protocol: Tcp
+          source_address_prefix: "{{ tower_public_ip }}/32"
+          destination_port_range: 5986
+          access: Allow
+          priority: 200
+          direction: Inbound           
     delegate_to: localhost
 ...
