--- a/azure_vm_security_winsrv2016.yml
+++ b/azure_vm_security_winsrv2016.yml
@@ -9,19 +9,19 @@
       resource_group: "{{ resource_group }}"
       name: "{{ security_group }}"
       rules:
-        - name: RDP
+        - name: AllowRDP
           protocol: Tcp
           source_address_prefix: "{{ tower_public_ip }}/32"
           destination_port_range: 3389
           access: Allow
           priority: 100
           direction: Inbound
-        - name: WinRM
+        - name: AllowWinRM
           protocol: Tcp
           source_address_prefix: "{{ tower_public_ip }}/32"
           destination_port_range: 5986
           access: Allow
-          priority: 200
+          priority: 101
           direction: Inbound           
     delegate_to: localhost
 ...
