--- a/azure_vm_security_winsrv2016.yml
+++ b/azure_vm_security_winsrv2016.yml
@@ -4,7 +4,7 @@
   gather_facts: no
 
   tasks:
-  - name: Allow RDP and WinRM Inbound Ports
+  - name: Allow RDP, Kerberos and WinRM Inbound Ports
     azure_rm_securitygroup:
       resource_group: "{{ resource_group }}"
       name: "{{ security_group }}"
