--- a/azure_vm_create_rhel.yml
+++ b/azure_vm_create_rhel.yml
@@ -6,6 +6,9 @@
 
   vars_files:
     - azure_vars.yml
+  vars:
+    - azure_group_name: rhel-group
+    - azure_new_vm_name: rhel-server-01
     - vm_size: Standard_B1s
     - offer: RHEL
     - publisher: RedHat
@@ -16,8 +19,8 @@
   - name: Create virtual machine
     azure_rm_virtualmachine:
       resource_group: "{{ azure_group_name }}"
-      name: "{{ target_host_name }}"
-      short_hostname: "{{ target_host_name }}"
+      name: "{{ azure_new_vm_name }}"
+      short_hostname: "{{ azure_new_vm_name }}"
       vm_size: "{{ vm_size }}"
       admin_username: "{{ azure_ssh_user }}"
       ssh_password_enabled: false
