--- a/roles/virtualmachine/tasks/main.yaml
+++ b/roles/virtualmachine/tasks/main.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure Private NIC is Present
+- name: Provision or Modify Private NIC - {{ vm_name }}
   azure.azcollection.azure_rm_networkinterface:
     name: "{{ vm_name }}_nic01"
     resource_group: "{{ subnet_rg_name }}"
@@ -10,8 +10,9 @@
       - name: "{{ vm_name }}_nic01_ipconfig1"
         primary: true
         private_ip_allocation_method: Dynamic
+    state: "{{ vm_state }}"
 
-- name: Ensure Virtual Machine is Present
+- name: Provision or Modify Virtual Machine State - {{ vm_name }}
   azure.azcollection.azure_rm_virtualmachine:
     resource_group: "{{ vm_rg_name }}"
     name: "{{ vm_name }}"
@@ -19,14 +20,14 @@
     admin_password: "{{ vm_password }}"
     vm_size: "{{ vm_size }}"
     network_interfaces: "{{ vm_name }}_nic01"
-    state: present
+    state: "{{ vm_state }}"
     os_type: Linux
     image:
       offer: RHEL
       publisher: RedHat
       sku: '9_5'
       version: latest
-    os_disk_size_gb: 64
+    os_disk_size_gb: "{{ vm_os_disk_size_gb }}"
     os_disk_name: "{{ vm_name }}_osdisk"
     managed_disk_type: Standard_LRS
     tags: "{{ vm_tags }}"
