--- a/azure_provision_vm_single.yaml
+++ b/azure_provision_vm_single.yaml
@@ -11,6 +11,8 @@
     demo_vm_size: Standard_B1s
     dmeo_vm_os_disk_size_gb: 64
     demo_vm_state: present
+    vm_username: demoadmin
+    vm_password: changeme
     demo_tags:
       demo: aap
       guid: zn56b
@@ -28,4 +30,6 @@
         vm_state: "{{ demo_vm_state }}"
         vm_size: "{{ demo_vm_size }}"
         vm_os_disk_size_gb: "{{ dmeo_vm_os_disk_size_gb }}"
+        vm_username: "{{ demo_vm_username }}"
+        vm_password: "{{ demo_vm_password }}"
         vm_tags: "{{ demo_tags }}"
