--- a/roles/virtualmachine/tasks/main.yaml
+++ b/roles/virtualmachine/tasks/main.yaml
@@ -10,7 +10,9 @@
       - name: "{{ vm_name }}_nic01_ipconfig1"
         primary: true
         private_ip_allocation_method: Dynamic
-    state: "{{ vm_state }}"
+    # on deletion, vm needs to be deleted first
+    # state: "{{ vm_state }}"
+  when: state != "absent"
 
 - name: Provision or Modify Virtual Machine State - {{ vm_name }}
   azure.azcollection.azure_rm_virtualmachine:
