--- a/roles/resourcegroup/defaults/main.yaml
+++ b/roles/resourcegroup/defaults/main.yaml
@@ -1,7 +1,8 @@
 ---
 # Example default value
-rg_name: my_aap_rg
+rg_name: rg-my-aap
 rg_location: eastus
 rg_tags:
   mytag1: value1
   mytag2: value2
+rg_state: present
