--- a/roles/subnet/defaults/main.yaml
+++ b/roles/subnet/defaults/main.yaml
@@ -1,5 +1,6 @@
 ---
-subnet_rg_name: my_aap_rg
-subnet_vnet_name: my_aap_vnet
-subnet_name: my_aap_subnet
+subnet_rg_name: rg-my-aap
+subnet_vnet_name: vnet-my-aap
+subnet_name: snet-my-aap
 subnet_address_prefix_cidr: "10.0.1.0/24"
+subnet_state: present
