--- a/roles/virtualmachine/tasks/main.yaml
+++ b/roles/virtualmachine/tasks/main.yaml
@@ -11,8 +11,7 @@
         primary: true
         private_ip_allocation_method: Dynamic
         public_ip_address_name: "{{ vm_name }}_public_ip"
-    # on deletion, vm needs to be deleted first
-    # state: "{{ vm_state }}"
+  # only do this task on present state
   when: vm_state != "absent"
 
 - name: Provision or Modify Virtual Machine State - {{ vm_name }}
