--- a/roles/virtualnetwork/defaults/main.yaml
+++ b/roles/virtualnetwork/defaults/main.yaml
@@ -1,11 +1,13 @@
 ---
 # Example default value
-vnet_rg_name: my_aap_rg
-vnet_name: my_aap_vnet
+vnet_rg_name: rg-my-aap
+vnet_name: vnet-my-aap
 vnet_address_prefixes_cidr:
   - 10.0.0.0/16
-vnet_dns_servers:
-  - 168.63.129.16
+# dns can be omitted, so do not put defaults
+# vnet_dns_servers:
+#   - 168.63.129.16
+vnet_state: present
 vnet_tags:
   mytag1: value1
   mytag2: value2
