--- a/azure_provision_subnet.yaml
+++ b/azure_provision_subnet.yaml
@@ -4,12 +4,12 @@
   gather_facts: false
 
   vars:
-    demo_rg_name: aap_demo_rg
-    demo_vnet_name: aap_demo_vnet
+    demo_rg_name: rg-aap-demo
+    demo_subnet_state: present
     demo_subnet_list:
-      - { name: aap_demo_subnet1, prefix: 10.0.1.0/24 }
-      - { name: aap_demo_subnet2, prefix: 10.0.2.0/24 }
-      - { name: aap_demo_subnet3, prefix: 10.0.3.0/24 }
+      - { name: snet-aap-demo-cli, vnet_name: vnet-aap-demo-cli, prefix: 172.16.132.0/24 }
+      - { name: snet-aap-demo-1, vnet_name: vnet-aap-demo, prefix: 172.16.134.0/24 }
+      - { name: snet-aap-demo-2, vnet_name: vnet-aap-demo, prefix: 172.16.135.0/24 }
 
   tasks:
     - name: Process Subnet List
@@ -17,7 +17,8 @@
         name: subnet
       vars:
         subnet_rg_name: "{{ demo_rg_name }}"
-        subnet_vnet_name: "{{ demo_vnet_name }}"
+        subnet_vnet_name: "{{ item.vnet_name }}"
         subnet_name: "{{ item.name }}"
         subnet_address_prefix_cidr: "{{ item.prefix }}"
+        subnet_state: "{{ demo_subnet_state }}"
       loop: "{{ demo_subnet_list }}"
