--- a/azure_provision_vm.yaml
+++ b/azure_provision_vm.yaml
@@ -6,12 +6,19 @@
   vars:
     demo_rg_name: rg-aap-demo
     demo_vm_list:
-      - { vm_name: vm-aap-demo-1, vnet_name: vnet-aap-demo, subnet_name: snet-aap-demo-1, vm_size: Standard_B1s, vm_os_disk_size_gb: 128 }
-      - { vm_name: vm-aap-demo-2, vnet_name: vnet-aap-demo, subnet_name: snet-aap-demo-2, vm_size: Standard_B1s, vm_os_disk_size_gb: 64 }
-      - { vm_name: vm-aap-demo-cli, vnet_name: vnet-aap-demo-cli, subnet_name: snet-aap-demo-cli, vm_size: Standard_B1s, vm_os_disk_size_gb: 128 }
+      - { vm_name: aap-jumphost, vnet_name: vnet-aap-demo, subnet_name: snet-aap-demo-jumphost,
+          vm_size: Standard_B4as_v2, vm_os_disk_size_gb: 64, vm_public_ip_name: aap-jumphost-pip }
+      - { vm_name: vm-aap-demo-core, vnet_name: vnet-aap-demo, subnet_name: snet-aap-demo-core,
+          vm_size: Standard_B4ms, vm_os_disk_size_gb: 160 }
     demo_vm_state: present
     demo_vm_username: demoadmin
     demo_vm_password: changeme
+    demo_vm_image:
+      # use raw as lvm offer does not provide full root partition size
+      offer: rhel-raw
+      publisher: RedHat
+      sku: '9_5'
+      version: latest
     demo_tags:
       demo: aap
       guid: zn56b
@@ -29,7 +36,9 @@
         vm_state: "{{ demo_vm_state }}"
         vm_size: "{{ item.vm_size }}"
         vm_os_disk_size_gb: "{{ item.vm_os_disk_size_gb }}"
+        vm_public_ip_name: "{{ item.vm_public_ip_name }}"
         vm_username: "{{ demo_vm_username }}"
         vm_password: "{{ demo_vm_password }}"
+        vm_image: "{{ demo_vm_image }}"
         vm_tags: "{{ demo_tags }}"
       loop: "{{ demo_vm_list }}"
